test/corpus/expressions.txt
===============
Lambda simple
===============

f := \x. x

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (identifier)
      body: (identifier))))

===============
Lambda multi-parameter
===============

f := \x y. x

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (identifier)
      pattern: (identifier)
      body: (identifier))))

===============
Lambda with wildcard
===============

f := \_. 1

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (wildcard)
      body: (integer))))

===============
Lambda with constructor pattern
===============

f := \(Just x). x

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (parenthesized_pattern
        (constructor_pattern
          (constructor)
          (identifier)))
      body: (identifier))))

===============
Lambda with tuple pattern
===============

f := \(a, b). a

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (tuple_pattern
        (identifier)
        (identifier))
      body: (identifier))))

===============
Lambda with record pattern
===============

f := \{ x: a, y: b }. a

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (record_pattern
        (field_pattern
          label: (identifier)
          value: (identifier))
        (field_pattern
          label: (identifier)
          value: (identifier)))
      body: (identifier))))

===============
Do expression with bind
===============

f := do { x <- pure 1; pure x }

---

(source_file
  (value_definition
    name: (identifier)
    value: (do_expression
      (bind_statement
        pattern: (identifier)
        value: (application
          (identifier)
          (integer)))
      (application
        (identifier)
        (identifier)))))

===============
Do expression with let
===============

f := do { x := 1; pure x }

---

(source_file
  (value_definition
    name: (identifier)
    value: (do_expression
      (let_statement
        name: (identifier)
        value: (integer))
      (application
        (identifier)
        (identifier)))))

===============
Do expression with bind let and expression
===============

f := do { x <- pure 1; y := 2; pure x }

---

(source_file
  (value_definition
    name: (identifier)
    value: (do_expression
      (bind_statement
        pattern: (identifier)
        value: (application
          (identifier)
          (integer)))
      (let_statement
        name: (identifier)
        value: (integer))
      (application
        (identifier)
        (identifier)))))

===============
Infix operator expression
===============

f := x + y

---

(source_file
  (value_definition
    name: (identifier)
    value: (infix_expression
      (identifier)
      operator: (operator)
      (identifier))))

===============
Backtick operator
===============

f := x `plus` y

---

(source_file
  (value_definition
    name: (identifier)
    value: (infix_expression
      (identifier)
      operator: (backtick_operator
        (identifier))
      (identifier))))

===============
Application two arguments
===============

f := g x y

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (application
        (identifier)
        (identifier))
      (identifier))))

===============
Application single argument
===============

f := g x

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (identifier)
      (identifier))))

===============
Record expression
===============

f := { x: 1, y: 2 }

---

(source_file
  (value_definition
    name: (identifier)
    value: (record_expression
      (field_value
        label: (identifier)
        value: (integer))
      (field_value
        label: (identifier)
        value: (integer)))))

===============
Record update expression
===============

f := { r | x: 1 }

---

(source_file
  (value_definition
    name: (identifier)
    value: (record_update_expression
      base: (identifier)
      (field_value
        label: (identifier)
        value: (integer)))))

===============
Block expression
===============

f := { x := 1; x }

---

(source_file
  (value_definition
    name: (identifier)
    value: (block_expression
      (let_statement
        name: (identifier)
        value: (integer))
      (identifier))))

===============
Type application expression
===============

f := x@Int

---

(source_file
  (value_definition
    name: (identifier)
    value: (type_application_expression
      (identifier)
      (constructor))))

===============
Tuple expression
===============

f := (1, 2, 3)

---

(source_file
  (value_definition
    name: (identifier)
    value: (tuple_expression
      (integer)
      (integer)
      (integer))))

===============
Two-element tuple
===============

f := (True, 42)

---

(source_file
  (value_definition
    name: (identifier)
    value: (tuple_expression
      (constructor)
      (integer))))

===============
List expression
===============

f := [1, 2, 3]

---

(source_file
  (value_definition
    name: (identifier)
    value: (list_expression
      (integer)
      (integer)
      (integer))))

===============
Empty list
===============

f := []

---

(source_file
  (value_definition
    name: (identifier)
    value: (list_expression)))

===============
Unit expression
===============

f := ()

---

(source_file
  (value_definition
    name: (identifier)
    value: (unit_expression)))

===============
Parenthesized expression
===============

f := (1 + 2)

---

(source_file
  (value_definition
    name: (identifier)
    value: (parenthesized_expression
      (infix_expression
        (integer)
        operator: (operator)
        (integer)))))

===============
Type annotation in expression
===============

f := (x :: Int)

---

(source_file
  (value_definition
    name: (identifier)
    value: (parenthesized_expression
      (identifier)
      (constructor))))

===============
Constructor application
===============

f := Just 1

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (constructor)
      (integer))))

===============
Nullary constructor
===============

f := Nothing

---

(source_file
  (value_definition
    name: (identifier)
    value: (constructor)))

===============
Case expression simple
===============

f := case x { True => 1; False => 0 }

---

(source_file
  (value_definition
    name: (identifier)
    value: (case_expression
      scrutinee: (identifier)
      (case_branch
        pattern: (constructor)
        body: (integer))
      (case_branch
        pattern: (constructor)
        body: (integer)))))

===============
Case expression with application scrutinee
===============

f := case g x { Just y => y; Nothing => 0 }

---

(source_file
  (value_definition
    name: (identifier)
    value: (case_expression
      scrutinee: (application
        (identifier)
        (identifier))
      (case_branch
        pattern: (constructor_pattern
          (constructor)
          (identifier))
        body: (identifier))
      (case_branch
        pattern: (constructor)
        body: (integer)))))

===============
Case expression empty body
===============

f := case x {}

---

(source_file
  (value_definition
    name: (identifier)
    value: (case_expression
      scrutinee: (identifier))))

===============
Projection expression
===============

f := r.#x

---

(source_file
  (value_definition
    name: (identifier)
    value: (projection_expression
      (identifier)
      field: (identifier))))

===============
Chained projection
===============

f := r.#x.#y

---

(source_file
  (value_definition
    name: (identifier)
    value: (projection_expression
      (projection_expression
        (identifier)
        field: (identifier))
      field: (identifier))))

===============
Operator section prefix
===============

f := foldr (+) 0 xs

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (application
        (application
          (identifier)
          (operator_section
            operator: (operator)))
        (integer))
      (identifier))))

===============
Right operator section
===============

f := map (+ 1) xs

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (application
        (identifier)
        (right_section
          operator: (operator)
          operand: (integer)))
      (identifier))))

===============
Left operator section
===============

f := filter (0 <) xs

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (application
        (identifier)
        (left_section
          operand: (integer)
          operator: (operator)))
      (identifier))))

===============
Operator section with multi-char operator
===============

f := foldr (<>) empty xs

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (application
        (application
          (identifier)
          (operator_section
            operator: (operator)))
        (identifier))
      (identifier))))

===============
Right section with application operand
===============

f := map (+ f x) xs

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (application
        (identifier)
        (right_section
          operator: (operator)
          operand: (application
            (identifier)
            (identifier))))
      (identifier))))

===============
Left section with application operand
===============

f := map (f x *) xs

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (application
        (identifier)
        (left_section
          operand: (application
            (identifier)
            (identifier))
          operator: (operator)))
      (identifier))))

===============
Dot operator section prefix
===============

f := (.)

---

(source_file
  (value_definition
    name: (identifier)
    value: (operator_section
      operator: (operator))))

===============
Dot right section
===============

f := (. show)

---

(source_file
  (value_definition
    name: (identifier)
    value: (right_section
      operator: (operator)
      operand: (identifier))))

===============
Dot left section
===============

f := (show .)

---

(source_file
  (value_definition
    name: (identifier)
    value: (left_section
      operand: (identifier)
      operator: (operator))))

===============
Parenthesized infix still works
===============

f := (1 + 2)

---

(source_file
  (value_definition
    name: (identifier)
    value: (parenthesized_expression
      (infix_expression
        (integer)
        operator: (operator)
        (integer)))))

===============
Lambda as application argument
===============

main := fix \self n. case n { 0 => 1; _ => n }

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (identifier)
      (lambda_expression
        pattern: (identifier)
        pattern: (identifier)
        body: (case_expression
          scrutinee: (identifier)
          (case_branch
            pattern: (integer)
            body: (integer))
          (case_branch
            pattern: (wildcard)
            body: (identifier)))))))

===============
Qualified variable
===============

f := M.lookup

---

(source_file
  (value_definition
    name: (identifier)
    value: (qualified_variable
      module: (constructor)
      name: (identifier))))

===============
Qualified constructor
===============

f := M.Just

---

(source_file
  (value_definition
    name: (identifier)
    value: (qualified_constructor
      module: (constructor)
      name: (constructor))))

===============
Qualified variable in application
===============

f := M.lookup key table

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (application
        (qualified_variable
          module: (constructor)
          name: (identifier))
        (identifier))
      (identifier))))

===============
Qualified constructor in application
===============

f := M.Just x

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (qualified_constructor
        module: (constructor)
        name: (constructor))
      (identifier))))

===============
Dot with spaces is composition not qualified
===============

f := M . x

---

(source_file
  (value_definition
    name: (identifier)
    value: (infix_expression
      (constructor)
      operator: (operator)
      (identifier))))

===============
Lambda as nested application argument
===============

main := \f. fix \self s. case s { LNil => z; LCons x t => f x (self (t ())) }

---

(source_file
  (value_definition
    name: (identifier)
    value: (lambda_expression
      pattern: (identifier)
      body: (application
        (identifier)
        (lambda_expression
          pattern: (identifier)
          pattern: (identifier)
          body: (case_expression
            scrutinee: (identifier)
            (case_branch
              pattern: (constructor)
              body: (identifier))
            (case_branch
              pattern: (constructor_pattern
                (constructor)
                (identifier)
                (identifier))
              body: (application
                (application
                  (identifier)
                  (identifier))
                (parenthesized_expression
                  (application
                    (identifier)
                    (parenthesized_expression
                      (application
                        (identifier)
                        (unit_expression)))))))))))))

===============
Do expression as application argument
===============

f := thunk do { x <- pure 42; pure x }

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (identifier)
      (do_expression
        (bind_statement
          pattern: (identifier)
          value: (application
            (identifier)
            (integer)))
        (application
          (identifier)
          (identifier))))))

===============
Case expression as application argument
===============

f := map (\x. case x { Just y => y; Nothing => 0 }) xs

---

(source_file
  (value_definition
    name: (identifier)
    value: (application
      (application
        (identifier)
        (parenthesized_expression
          (lambda_expression
            pattern: (identifier)
            body: (case_expression
              scrutinee: (identifier)
              (case_branch
                pattern: (constructor_pattern
                  (constructor)
                  (identifier))
                body: (identifier))
              (case_branch
                pattern: (constructor)
                body: (integer))))))
      (identifier))))

===============
Nested do as atom in do
===============

f := do { x <- thunk do { pure 1 }; force x }

---

(source_file
  (value_definition
    name: (identifier)
    value: (do_expression
      (bind_statement
        pattern: (identifier)
        value: (application
          (identifier)
          (do_expression
            (application
              (identifier)
              (integer)))))
      (application
        (identifier)
        (identifier)))))

===============
Evidence injection simple
===============

f := _myEq => eq 1 2

---

(source_file
  (value_definition
    name: (identifier)
    value: (evidence_injection
      (identifier)
      (application
        (application
          (identifier)
          (integer))
        (integer)))))
